--- a/TBS/config.ini
+++ b/TBS/config.ini
@@ -1,6 +1,11 @@
-[LOGFilePath]
+[LOGFile]
 Path=C:\Users\liudonghai\Desktop\TBS\log
-[LOGFileName]
-Name=%D_%h_%m_%s.log
-[LOGFileLine]
-Line=%m:%s:%t
+Name=%h-%m.log
+Line=
+[LOGFileTmp]
+Project=
+Path=
+Name=
+Line=
+[RedRat]
+Device=
